--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="hero-right-section">
-                        poza
+                        <img src="./assets/hero-img.png" alt="">
                     </div>
                 </div>
             </div>
